EXTRA_DIST = \
    README \
    nm-utils/gsystem-local-alloc.h \
    nm-utils/nm-glib.h \
    nm-utils/nm-macros-internal.h \
    nm-utils/nm-shared-utils.c \
    nm-utils/nm-shared-utils.h \
    nm-utils/nm-vpn-plugin-macros.h \
    nm-utils/nm-vpn-plugin-utils.c \
    nm-utils/nm-vpn-plugin-utils.h \
    nm-service-defines.h \
    nm-default.h
